--- a/PartyPalaceSystem/PartyPalaceSystem/Views/Home/Index.cshtml
+++ b/PartyPalaceSystem/PartyPalaceSystem/Views/Home/Index.cshtml
@@ -2,7 +2,28 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+
+<div class="container " style="">
+    <h1 class="display-4">Mero Party Palace</h1>
+    <div class="form-group float-end">
+        <h3 class="mb-5">Want to login or register?</h3>
+        <div>
+            <form>
+                <div class="mb-4 ">
+                    <label class="form-label">UserName</label><br/>
+                    <input class="form-control" type="text" id="username" placeholder="Enter Username" />
+                </div>
+
+                <div class="mb-4 ">
+                    <label class="form-label">Password</label><br/>
+                        <input class="form-control" type="password" id="password" placeholder="Enter Password" />
+                </div>
+                <div class="button form">
+                    <input class="btn btn-outline-success float-end" type="button" value="SignIn" />
+                </div>
+                <div><p>Not Registered?</p><a href="#">Register</a></div>
+            </form>
+        </div>
+    </div>
+    
 </div>
