--- a/PartyPalaceSystem/PartyPalaceSystem/Views/Shared/_Layout.cshtml
+++ b/PartyPalaceSystem/PartyPalaceSystem/Views/Shared/_Layout.cshtml
@@ -32,9 +32,9 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light border-bottom box-shadow mb-3">
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light border-bottom box-shadow .bg-dark.bg-gradient">
             <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">PartyPalaceSystem</a>
+                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">MeroPartyPalace</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -44,8 +44,15 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
-                        <li class="nav-item">
+                        @* <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                        </li> *@
+
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="SignIn">SignIn</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="SignUp">SignUp</a>
                         </li>
                     </ul>
                 </div>
@@ -57,7 +64,7 @@
             @RenderBody()
         </main>
     </div>
-
+    
     <footer class="border-top footer text-muted fixed-bottom">
         <div class="container">
             &copy; 2024 - PartyPalaceSystem - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
